--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "9vUvjjqYqI8hXqmPQFjx09",
+    "id" : "1kENXiNLb2lk1gYCzMGuqm",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
