Automation summary for Force Undo Checkout testsZGZjNTU0ZjAtY2Q1Ni00Mj
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "3hH7kEQVvqClsK7Ue6yT8Y",
+    "id" : "7XeD39qxIyQjAPtrvo188v",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
