Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "juSBt9db2Griuv513f6iIn",
+    "id" : "iqYfW4edds1jzbzlibtPss",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
