Automation summary DepUI CMDNWM5NDJkYjQtZGFkNS00YT0
Automation Desc

--- a/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
+++ b/Explore/InlineActionsProjectDepen/.InlineActionsProjectDepen.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "1kENXiNLb2lk1gYCzMGuqm",
+    "id" : "10PIWm4IzVji9f4MbZoV22",
     "name" : "InlineActionsProjectDepen",
     "type" : "Project",
     "metadata" : {
